src/test/deca/syntax/valid/parser/extension/array_access_multiple.deca
{
    int x = a[1+6][1][2][a];
    5 + 4 * 5;
}