src/test/deca/syntax/invalid/parser/extension/array_access_extra_bracketL.deca
{
    int x = a[[0];
}